fixed spacing

--- a/fe/src/components/SongRow/index.css
+++ b/fe/src/components/SongRow/index.css
@@ -1,5 +1,5 @@
 .songRow {
-  padding: 15px 20px 15px 0;
+  padding: 15px 0;
   display: flex;
   align-items: center;
   z-index: 100;
